Check AppletPopup visibility conditions whenever focus switches

The logic behind whether an AppletPopup should switch depends on
the active focus window. However, it is run only when the popup
itself loses focus. By running it each time the active focus
window changes, we make sure the popup never remains stuck open.

BUG:500580